--- a/_posts/2020-06-11-folium.md
+++ b/_posts/2020-06-11-folium.md
@@ -1,14 +1,21 @@
 ---
-layout: post
-title: Folium
-subtitle: Exercícios e Referências
-tags: [python, pycharm, jupyter, package, folium]
-image: /img/posts/folium_icon.png
-bigimg: /img/posts/folium_big.png
-gh-repo: michelmetran/package_folium
-gh-badge: [follow, star, watch, fork]
-comments: true
 
+title: Folium
+#subtitle: Exercícios e Referências
+#layout: post
+categories:
+  - blog
+tags:
+- python
+- pycharm
+- jupyter
+- package
+- folium
+#image: /img/posts/folium_icon.png
+#bigimg: /img/posts/folium_big.png
+#gh-repo: michelmetran/package_folium
+#gh-badge: [follow, star, watch, fork]
+#comments: true
 ---
 
 O [***Folium***](https://python-visualization.github.io/folium/index.html) é um pacote que possibilita a criação de mapas *online*, facilitando a visualização dos dados manipulados no *Python* em um mapa que usa a biblioteca JavaScript [***Leaflet***](https://leafletjs.com). É possível inserir *basemaps*, *shapefiles*, arquivos *geojson* e *topojson*.
