--- a/_posts/2020-06-11-folium.md
+++ b/_posts/2020-06-11-folium.md
@@ -1,8 +1,5 @@
 ---
-
-title: Folium
-#subtitle: Exercícios e Referências
-#layout: post
+title: "Folium"
 categories:
   - blog
 tags:
@@ -11,11 +8,15 @@ tags:
 - jupyter
 - package
 - folium
+
+#subtitle: Exercícios e Referências
+#layout: post
 #image: /img/posts/folium_icon.png
 #bigimg: /img/posts/folium_big.png
 #gh-repo: michelmetran/package_folium
 #gh-badge: [follow, star, watch, fork]
 #comments: true
+
 ---
 
 O [***Folium***](https://python-visualization.github.io/folium/index.html) é um pacote que possibilita a criação de mapas *online*, facilitando a visualização dos dados manipulados no *Python* em um mapa que usa a biblioteca JavaScript [***Leaflet***](https://leafletjs.com). É possível inserir *basemaps*, *shapefiles*, arquivos *geojson* e *topojson*.
