--- a/_posts/2020-02-28-wms.md
+++ b/_posts/2020-02-28-wms.md
@@ -1,15 +1,18 @@
 ---
-layout: post
-title: WMS
-subtitle: Exercícios e Referências
+title: "WMS"
+tags:
+- wms
+- geodata
+- gis
 
-thumbnail-img: /assets/img/posts/wms_icon.png
-share-img: /assets/img/posts/wms_big.png
-cover-img: /assets/img/posts/wms_big.png
+#layout: post
+#subtitle: Exercícios e Referências
+#thumbnail-img: /assets/img/posts/wms_icon.png
+#share-img: /assets/img/posts/wms_big.png
+#cover-img: /assets/img/posts/wms_big.png
+#comments: true
+#language: pt-br
 
-comments: true
-language: pt-br
-tags: [wms, geodata, gis]
 ---
 
 Os serviços Web Map Service (WMS).
