--- a/_posts/2020-06-11-folium.md
+++ b/_posts/2020-06-11-folium.md
@@ -1,13 +1,7 @@
 ---
 title: "Folium"
-categories:
-  - blog
-tags:
-- python
-- pycharm
-- jupyter
-- package
-- folium
+categories: [blog]
+tags: [python, pycharm, jupyter, package, folium]
 
 #subtitle: Exercícios e Referências
 #layout: post
