--- a/_posts/2020-02-28-wms.md
+++ b/_posts/2020-02-28-wms.md
@@ -21,10 +21,10 @@ Os serviços Web Map Service (WMS).
 
 ### Federal
 
-- [BR_IBGE](http://www.geoservicos.ibge.gov.br/geoserver/ows)
-- [BR_IBAMA](http://siscom.ibama.gov.br/geoserver/ows)
-- [BR_Ministério da Pesca e Aquicultura](http://sinpesq.mpa.gov.br/geoserver/ows)
-- [BR_ICMBio](http://mapas.icmbio.gov.br/geoserver/ows)
+- [BR IBGE](http://www.geoservicos.ibge.gov.br/geoserver/ows)
+- [BR IBAMA](http://siscom.ibama.gov.br/geoserver/ows)
+- [BR Ministério da Pesca e Aquicultura](http://sinpesq.mpa.gov.br/geoserver/ows)
+- [BR ICMBio](http://mapas.icmbio.gov.br/geoserver/ows)
 - Instituto Chico Mendes
 - https://inde.gov.br/CatalogoGeoservicos
 
@@ -32,7 +32,7 @@ Os serviços Web Map Service (WMS).
 
 ### Estado de São Paulo
 
-- [SP_SIMA](http://datageo.ambiente.sp.gov.br/geoserver/ows)
+- [SP SIMA](http://datageo.ambiente.sp.gov.br/geoserver/ows)
 - Cartas IGC 1:10.000
 - http://geoportal.igc.sp.gov.br:6080/arcgis/services/IGC/GeoPortal_CartasTopograficas_ImgSrv/ImageServer/WMSServer?Cartas IBGE 1:50.000:
 - http://datageo.ambiente.sp.gov.br/geoimage/datageoimg/Cartas_50k_IBGE/wms?Imagens RapidEye 2011:
@@ -49,4 +49,4 @@ Os serviços Web Map Service (WMS).
 
 ### Estado de de Santa Catarina
 
-- [SC_Secretaria de Desenvolvimento Sustentável]: http://www.aguas.sc.gov.br/geoserver/ows
+- [SC Secretaria de Desenvolvimento Sustentável](http://www.aguas.sc.gov.br/geoserver/ows) 
