--- a/_posts/2020-02-28-wms.md
+++ b/_posts/2020-02-28-wms.md
@@ -1,5 +1,5 @@
 ---
-title: "WMS"
+title: "Serviços WMS e WFS"
 tags: [wms, geodata, gis]
 
 #layout: post
@@ -13,9 +13,6 @@ tags: [wms, geodata, gis]
 ---
 
 Os serviços Web Map Service (WMS).
-
-{: .box-warning}
-**Aviso:** Esse _post_ tem a finalidade de mostrar os comandos básicos e me deixar com uma "cola" rápida para meu uso cotidiano. Todas os códigos são exemplificativos e podem/devem ser alterados, indicando o nome dos arquivos e diretórios corretamente.
 
 <br>
 
