--- a/_posts/2020-02-28-wms.md
+++ b/_posts/2020-02-28-wms.md
@@ -23,7 +23,7 @@ Os serviços Web Map Service (WMS).
 - [BR Ministério da Pesca e Aquicultura](http://sinpesq.mpa.gov.br/geoserver/ows)
 - [BR ICMBio](http://mapas.icmbio.gov.br/geoserver/ows)
 - Instituto Chico Mendes
-- https://inde.gov.br/CatalogoGeoservicos
+- [BR INDE](https://inde.gov.br/CatalogoGeoservicos)
 
 
 
