--- a/_posts/2020-02-28-wms.md
+++ b/_posts/2020-02-28-wms.md
@@ -30,6 +30,7 @@ Os serviços Web Map Service (WMS).
 ### Estado de São Paulo
 
 - [SP SIMA](http://datageo.ambiente.sp.gov.br/geoserver/ows)
+- [SP IDE](http://www.idesp.sp.gov.br/)
 - Cartas IGC 1:10.000
 - http://geoportal.igc.sp.gov.br:6080/arcgis/services/IGC/GeoPortal_CartasTopograficas_ImgSrv/ImageServer/WMSServer?Cartas IBGE 1:50.000:
 - http://datageo.ambiente.sp.gov.br/geoimage/datageoimg/Cartas_50k_IBGE/wms?Imagens RapidEye 2011:
