--- a/test/4_export_data.ipynb
+++ b/test/4_export_data.ipynb
@@ -275,7 +275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 32,
    "id": "1192828b-9b37-45a4-aacf-53b59f5c9ff8",
    "metadata": {},
    "outputs": [
@@ -388,7 +388,7 @@
        "819  100.00000000    mg/L  "
       ]
      },
-     "execution_count": 29,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -403,7 +403,7 @@
     "# Read Dataframes\n",
     "df = dd.read_parquet(\n",
     "    os.path.join(filter_path),\n",
-    "    filters=filters,\n",
+    "    #filters=filters,\n",
     ")\n",
     "\n",
     "# Calculate\n",
