--- a/test/4_export_data.ipynb
+++ b/test/4_export_data.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 1,
    "id": "d45fba69-3d14-4ccb-b34b-6ecddfc686ff",
    "metadata": {},
    "outputs": [],
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 2,
    "id": "3f5e47c3-ebdc-4d7c-bab8-882385d6bacb",
    "metadata": {},
    "outputs": [],
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 3,
    "id": "831caa08-d106-47cb-ade0-86f840d0fa20",
    "metadata": {},
    "outputs": [
@@ -166,7 +166,7 @@
        "4  ABAN02800 2017-09-20 09:39:00  Oxigênio Dissolvido  None   4.50    mg/L"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -199,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 4,
    "id": "30976dba-fa37-43ef-84aa-90d961158b4d",
    "metadata": {},
    "outputs": [
@@ -209,7 +209,7 @@
        "<AxesSubplot:xlabel='datahora_coleta', ylabel='valor'>"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -242,7 +242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 5,
    "id": "eceec4ae-4989-4cde-b10b-bb9c10b9cda9",
    "metadata": {},
    "outputs": [
@@ -252,7 +252,7 @@
        "'../data/amostras/cod_ponto=ABAN02800/parametro=*/*.parquet'"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -275,7 +275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 9,
    "id": "1192828b-9b37-45a4-aacf-53b59f5c9ff8",
    "metadata": {},
    "outputs": [
@@ -333,7 +333,7 @@
        "      <td>mg/L</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>799</th>\n",
+       "      <th>1</th>\n",
        "      <td>ABAN02800</td>\n",
        "      <td>2017-01-17 09:50:00</td>\n",
        "      <td>Sódio</td>\n",
@@ -342,7 +342,7 @@
        "      <td>mg/L</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>287</th>\n",
+       "      <th>2</th>\n",
        "      <td>ABAN02800</td>\n",
        "      <td>2017-01-17 09:50:00</td>\n",
        "      <td>Cádmio Total</td>\n",
@@ -351,7 +351,7 @@
        "      <td>mg/L</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>267</th>\n",
+       "      <th>3</th>\n",
        "      <td>ABAN02800</td>\n",
        "      <td>2017-01-17 09:50:00</td>\n",
        "      <td>Crômio Total</td>\n",
@@ -360,7 +360,7 @@
        "      <td>mg/L</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>819</th>\n",
+       "      <th>4</th>\n",
        "      <td>ABAN02800</td>\n",
        "      <td>2017-01-17 09:50:00</td>\n",
        "      <td>Sólido Dissolvido Total</td>\n",
@@ -373,22 +373,22 @@
        "</div>"
       ],
       "text/plain": [
-       "     cod_ponto     datahora_coleta                parametro sinal  \\\n",
-       "0    ABAN02800 2017-01-17 09:50:00      Alumínio Dissolvido     <   \n",
-       "799  ABAN02800 2017-01-17 09:50:00                    Sódio  None   \n",
-       "287  ABAN02800 2017-01-17 09:50:00             Cádmio Total     <   \n",
-       "267  ABAN02800 2017-01-17 09:50:00             Crômio Total     <   \n",
-       "819  ABAN02800 2017-01-17 09:50:00  Sólido Dissolvido Total     <   \n",
+       "   cod_ponto     datahora_coleta                parametro sinal         valor  \\\n",
+       "0  ABAN02800 2017-01-17 09:50:00      Alumínio Dissolvido     <    0.10000000   \n",
+       "1  ABAN02800 2017-01-17 09:50:00                    Sódio  None    4.72000000   \n",
+       "2  ABAN02800 2017-01-17 09:50:00             Cádmio Total     <    0.00070000   \n",
+       "3  ABAN02800 2017-01-17 09:50:00             Crômio Total     <    0.02000000   \n",
+       "4  ABAN02800 2017-01-17 09:50:00  Sólido Dissolvido Total     <  100.00000000   \n",
        "\n",
-       "            valor unidade  \n",
-       "0      0.10000000    mg/L  \n",
-       "799    4.72000000    mg/L  \n",
-       "287    0.00070000    mg/L  \n",
-       "267    0.02000000    mg/L  \n",
-       "819  100.00000000    mg/L  "
+       "  unidade  \n",
+       "0    mg/L  \n",
+       "1    mg/L  \n",
+       "2    mg/L  \n",
+       "3    mg/L  \n",
+       "4    mg/L  "
       ]
      },
-     "execution_count": 32,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -410,8 +410,8 @@
     "df = df.compute()\n",
     "#df['valor'] = pd.to_numeric(df['valor'].str.replace(',', '.'), errors='ignore')\n",
     "df = df[['cod_ponto', 'datahora_coleta', 'parametro', 'sinal', 'valor', 'unidade']].copy()\n",
-    "df.reset_index(inplace=True, drop=True)\n",
     "df.sort_values(by=['datahora_coleta'], ascending=True, inplace=True)\n",
+    "df.reset_index(inplace=True, drop=True)\n",
     "\n",
     "# Results\n",
     "print(len(df))\n",
@@ -421,7 +421,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 7,
    "id": "9306520e-ccd1-4a18-8874-b2ece8cda585",
    "metadata": {},
    "outputs": [],
@@ -438,7 +438,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 8,
    "id": "d1908434-d8a5-4b01-8453-83de3e389b3a",
    "metadata": {},
    "outputs": [
@@ -454,7 +454,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -465,8 +465,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "e06a8d3d-c8c2-42d1-9de5-a4038d4956f6",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Timestamp('2021-01-18 10:45:00')"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "min(df['datahora_coleta'])\n",
+    "max(df['datahora_coleta'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9ce827f7-de2f-4de7-aee5-a8fb8dd92a6c",
    "metadata": {},
    "outputs": [],
    "source": []
