--- a/_posts/2020-06-11-folium.md
+++ b/_posts/2020-06-11-folium.md
@@ -10,7 +10,6 @@ tags: [python, pycharm, jupyter, package, folium]
 #gh-repo: michelmetran/package_folium
 #gh-badge: [follow, star, watch, fork]
 #comments: true
-
 ---
 
 O [***Folium***](https://python-visualization.github.io/folium/index.html) é um pacote que possibilita a criação de mapas *online*, facilitando a visualização dos dados manipulados no *Python* em um mapa que usa a biblioteca JavaScript [***Leaflet***](https://leafletjs.com). É possível inserir *basemaps*, *shapefiles*, arquivos *geojson* e *topojson*.
@@ -35,6 +34,7 @@ O [***Folium***](https://python-visualization.github.io/folium/index.html) é um
 # Importando Bibliotecas
 
 As bibliotecas básicas (ou *packages*) necessárias para criação do mapa são:
+
 - O ***Pandas***, que tem a missão de trabalhar com dados, criar *subsets*, selecionar e filtros dados e;
 - O ***Folium***, que é a biblioteca que cria, na prática, o mapa!
 
@@ -54,6 +54,8 @@ from datetime import date
 ```python
 [os.makedirs(i, exist_ok=True) for i in ['data', 'docs', 'maps']]
 ```
+
+<br>
 
 # Criando um mapa
 
@@ -153,6 +155,7 @@ m
 # Inserindo feições
 
 As feições que são possiveis de apresentar são àquelas típicas do geoprocessamento:
+
 - Pontos;
 - Linhas;
 - Polígonos
@@ -245,6 +248,7 @@ icon
 ```
 
 ## Vegas
+
 O _folium_ tem o vegas https://vega.github.io/vega/ como _default_.
 
 ```python
@@ -264,7 +268,7 @@ for index, row in df.iterrows():
             location=[row['latitude'], row['longitude']],            
             popup=folium.Popup(max_width=450).add_child(folium.Vega(json.load(open(vis)), width=450, height=250))
 ).add_to(m)
-        
+
 # Display Map
 m
 ```
@@ -461,6 +465,7 @@ m
 # Basemap
 
 ## Por nome
+
 O mapa pode ter diferentes *basemaps*, que são, na essência, o mapa de fundo renderizado em *titles*. O *folium* utiliza, por *default*, o basemap do *OpenStreetMap*, contudo existe a possibilidade de adicionar outros serviços, conforme se vê abaixo.
 
 - https://github.com/nextgis/quickmapservices_contrib/tree/master/data_sources
@@ -481,6 +486,7 @@ folium.Map(location=[-23.9619271,-46.3427499],
 Um outro jeito de inserir _basemaps_ é utilizado o <a title="Link do MapBox" href="https://www.mapbox.com" target="_blank">MapBox</a>, onde é possível customizar um _basemap_ personalizado, bem como utilizar outros _basemaps_ pré-existentes, incluindo imagens de satélite de alta resolução, etc.
 
 Para melhor utilização, com a possiblidade de disponibilizar códigos, é necessário estudar a melhor maneira de ocultar a _API key_. Um início:
+
 - http://www.blacktechdiva.com/hide-api-keys/
 - https://www.quora.com/How-do-you-hide-your-API-customer-key-token-when-youre-pushing-code-to-Github
 
@@ -550,14 +556,14 @@ def create_tiles_folium(tile_service=2, location=[-23.9619271, -46.3427499], zoo
                    zoom_start=zoom_start,
                    tiles=[],
                   )
-    
+
     folium.TileLayer(tiles=df.loc[tile_service, 'link'],
                      attr=ref,
                      name=df.loc[tile_service, 'name'],
                     ).add_to(m)
-    
+
     folium.LayerControl().add_to(m)
-    
+
     return m
 ```
 
@@ -609,7 +615,7 @@ def create_map_multitiles(location=[-23.9619271, -46.3427499], zoom_start=10):
     #df = pd.read_csv('data/tiles.csv', index_col=0)
     df = pd.read_csv('https://raw.githubusercontent.com/michelmetran/package_folium/master/data/tiles.csv', index_col=0)
     #print(df)
-   
+
     # Filter some tiles
     #df = df[2:4]
     #df = df.loc[(df['name'] == 'ESRI Satelite') | (df['name'] == 'ESRI Street')]
@@ -874,7 +880,6 @@ min_lat=bounds[0][0]
 max_lat=bounds[1][0]
 min_lon=bounds[0][1]
 max_lon=bounds[1][1]
-
 ```
 
 ## Full Screen
@@ -993,11 +998,11 @@ m
 ```python
 legend_html = '''
 <div style="position: fixed; bottom: 50px; left: 50px; width: 100px; height: 90px; border:2px solid grey; z-index:9999; font-size:14px;">
-&nbsp;
-Cool Legend <br>&nbsp;
-East &nbsp;
-<i class=”fa fa-map-marker fa-2x" style="color:green”></i><br> &nbsp;
-West &nbsp;
+
+Cool Legend <br> 
+East  
+<i class=”fa fa-map-marker fa-2x" style="color:green”></i><br>  
+West  
 <i class="fa fa-map-marker fa-2x" style="color:red"></i>
 </div>
 '''
@@ -1049,21 +1054,22 @@ m.save(os.path.join('maps', 'map.html'))
 O mapa em *.html*, que é possivel acessar por usando o <a title="Link do GitHack" href="https://raw.githack.com" target="_blank">***githack.com***</a>. conforme segue:
 
 Fiz a tentativa de usar o domínio [***raw.githubusercontent.com***](https://raw.githubusercontent.com) sem sucesso, que possibilita acessar diretamente, porém recebi a seguinte mensagem de erro ao tentar renderizar o conteúdo do *.html*.
+
 ```
 Bloqueado pela diretiva X-Frame-Options
 Ocorreu um erro durante uma conexão com raw.githubusercontent.com.
 O Firefox impediu que esta página fosse carregada neste contexto porque a página tem uma política X-Frame-Options que não permite.
 ```
+
 <iframe src="https://rawcdn.githack.com/michelmetran/package_folium/master/maps/map.html" width="100%" height="500" frameborder="0"></iframe>
 
 # Referências
+
 - https://www.freecodecamp.org/news/real-world-data-science-project-traffic-accident-analysis-e5a36775ee11/
 - Muita coisa interessante em https://www.youtube.com/watch?v=4RnU5qKTfYY
 - https://jtemporal.com/folium/
 - https://www.kaggle.com/rachan/how-to-folium-for-maps-heatmaps-time-analysis
 - Muitos exemplos de ipynb https://nbviewer.jupyter.org/github/python-visualization/folium/tree/master/examples/
-
-
 
 ## Explorar
 
