See https://github.com/open-geodata/sp_cetesb_infoaguas/commit/3451878742344f3d9d3cd1164caa668c12305fbb from refs/heads/main

--- a/_posts/sp_cetesb_infoaguas/2020-01-01-ice.md
+++ b/_posts/sp_cetesb_infoaguas/2020-01-01-ice.md
@@ -4,6 +4,7 @@ date: 2022-02-25T12:00:00-03:00
 last_modified_at: 2021-11-01T12:00:00-03:00
 excerpt_separator: "<!--more-->"
 toc: false
+mathjax: true
 categories:
   - blog
 tags:
@@ -26,9 +27,9 @@ header:
       url: "https://sistemainfoaguas.cetesb.sp.gov.br"
 ---
 
-O Índice de Conformidade ao Enquadramento (ICE) busca indicar uma aderência das amostras realizadas em um período de tempo ao enquadramento definido para um corpo d'água, por meio de um conjunto de parâmetros. O índice foi desenvolvido no Canadá, pelo órgão ambiental que lá atua, e é utilizado até os dias de hoje em algumas províncias canadenses.
+O Índice de Conformidade ao Enquadramento (ICE) busca indicar uma aderência das amostras realizadas em um período de tempo ao enquadramento definido para um corpo d'água, por meio de um conjunto de parâmetros. O índice foi desenvolvido no Canadá, pelo órgão ambiental que lá atua, e é utilizado até os dias de hoje em algumas províncias canadenses. O índice é conhecido também por *CCME Water Quality Index* (a sigla CCME vem do [Canadian Council of Ministers of the Environment](https://www.ccme.ca/)).
 
-Existem diversos trabalhos acadêmicos mostrando a aplicação desse índice no Canadá, Egito, Turquia. No Brasil o índice foi, inicialmente, adotado em pesquisa realizada pelo Laboratório de Suporte a Tomada de Decisão (LabSid), vinculado ao Departamento de Hidráulica da Poli-USP. Em 2009 é discutida a *Proposta de um Índice para Avaliação de Conformidade da Qualidade dos Corpos Hídricos ao Enquadramento*, por Cristiane Araújo Amaro, em [sua dissertação de mestrado](https://teses.usp.br/teses/disponiveis/3/3147/tde-11082009-121147/pt-br.php). Pinto e colaboradores (2016) fizeram a análise do enquadramento do rio São Francisco por meio desse índice.
+Existem diversos trabalhos acadêmicos mostrando a aplicação desse índice no Canadá, Egito, Turquia. No Brasil o índice foi, inicialmente, adotado em pesquisa realizada pelo Laboratório de Suporte a Tomada de Decisão (LabSid), vinculado ao Departamento de Hidráulica da Poli-USP, sendo discutida a *Proposta de um Índice para Avaliação de Conformidade da Qualidade dos Corpos Hídricos ao Enquadramento*, por Cristiane Araújo Amaro, em 2009 em [sua dissertação de mestrado](https://teses.usp.br/teses/disponiveis/3/3147/tde-11082009-121147/pt-br.php). Pinto e colaboradores (2016) fizeram a análise do enquadramento do rio São Francisco por meio desse índice.
 
 Nas bacias hidrográficas dos rios Piracicaba, Capivari e Jundiaí o ICE foi aplicado quando da elaboração do [*Plano de Bacias*](https://plano.agencia.baciaspcj.org.br/o-plano/documentos), adotando cinco parâmetros sendo eles: fósforo, nitrogênio, coliformes fecais, oxigênio dissolvido (OD), demanda bioquímica de oxigênio (DBO). O Plano também sintetizou o significado do ICE:
 
@@ -40,21 +41,77 @@ Nas bacias hidrográficas dos rios Piracicaba, Capivari e Jundiaí o ICE foi apl
 
 ## Cálculos
 
-Dia 24.02.2022....
+A definição do *CCME Water Quality Index* é expressa, em geral, pela fómula abaixo. Pequenas modificações foram feitas visando simplificar os cálculos e notações matemáticas, visto que na definição o índice varia entre o número de 0 e 100 e, seguindo as modificações que fiz o índice passou a ser expresso em porcentagem, ou seja, varia entre 0 e 100%.
 
-Depois de muito bater cabeça e conferi tocos os cálculos... o único que estou errando é o F3...
-Eu uso escala de 0 até 1...
+O índice foi calculado usando o *python*, porém há um vídeo no [YouTube: CCME Water Quality Index Calculation using MS-Excel](https://www.youtube.com/watch?v=0zENI39T2HQ) que auxiliou na checagem de todos os cálculos, sendo o Excel uma ferramenta mais "visual".
 
-Ela usa escala de 0 até 100...
+O ínidice é composto por três componentes:
+
+- Fator 1 **Abrangência/Espaço**: representa a abrangência das desconformidades, isto é, o número de variáveis que violaram os limites desejáveis pelo menos uma vez no período de observação
+- Fator 2 **Frequência**: representa a porcentagem de vezes que a variável esteve em desconformidade em relação ao número de observações
+- Fator 3 **Amplitude**: representa a quantidade pela qual o valor testado falhou, isto é, a diferença entre o valor observado e o valor desejado de acordo com o objetivo de qualidade da água.
 
 
-https://www.youtube.com/watch?v=0zENI39T2HQ
+$$
+\begin{align}
+CCME\;Water\;Quality\;Index = 1 - \left(\frac{\sqrt{F_1^2 + F_2^2 + F_3^2}}{\sqrt{3}}\right)
+\end{align}
+$$
 
+<br>
 
+Para o cálculo do Fator 1 é necessário calcular a proporção do número de variáveis (ou parâmetros) que obtiveram desconformidade em um dado período de tempo. No presente estudo, estou utilizando o intervalo de um ano.
+$$
+\begin{align}
+F_1 = \frac{Nº\;de\;Variáveis\;que\;Falharam} {Nº\;Total\;de\;Variáveis}
+\end{align}
+$$
+<br>
+
+Para o cálculo de F2 é necessário calcular a proporção do número de amostras deconformes (de todas os parâmetros empregados na análise) em um dado período de tempo.
+$$
+\begin{align}
+F_2 = \frac{Nº\;de\;Testes\;que\;Falharam} {Nº\;Total\;de\;Testes}
+\end{align}
+$$
+<br>
+
+Para o cálculo de F3, faz-se necessário calcular a *soma normalizada das variações* (*snv*), que representa a distância do **valor máximo permitido** (VMP) estabelecido em alguma normativa (por exemplo, Decreto Estadual 8.468/76, Resolução CONAMA 357/05, Decisão de Diretoria CETESB 363/11 etc). Inicialmente é necessário calcular, para cada amostra desconforme, quantas vezes ela se afastou do desejado (VMP), conforme fórmula abaixo.
+$$
+\begin{align}
+Variação = \left(\frac{Valor\;testado\;que\;falhou} {Objetivo_i}\right)-1
+\end{align}
+$$
+<br>
+
+Há parâmetros que a meta é que a amostra não ultrapasse um dado valor, seria algo como um **valor mínimo permitido**. Como exemplo temos o Oxigênio Dissolvido (OD) que quanto maior, mehor! De acordo com as normas, para rios de classe 2, o mínimo de OD deve ser de 5 mg/L. Para esse tipo de parâmetro, dever ser feita uma pequena modificação para definição da variação, conforme abaixo.
+$$
+\begin{align}
+Variação = \left(\frac{Objetivo_i}{Valor\;testado\;que\;falhou}\right)-1
+\end{align}
+$$
+<br>
+
+A *soma normalizada das variações* (*snv*) busca encontrar uma média da distância ao VMP por amostra, conforme abaixo:
+$$
+\begin{align}
+snv = \frac{ \sum_{i=1}^{n}  Variações_i }{Nº\;Total\;de\;Testes}
+\end{align}
+$$
+<br>
+
+Um pequeno ajuste é feito para não haver erros nos calculos, acrescentando um número insignificante no denominador do parâmetro F3.
+$$
+\begin{align}
+F_3 = \frac{snv} {snv+0,0000001}
+\end{align}
+$$
 
 
 
 ## Resultados
+
+
 
 
 
@@ -66,15 +123,10 @@ Análise dos Valores do Índice de Conformidade ao Enquadramento no Baixo Rio da
 
 Canadian Water Quality Index
 
- 
-
-(2013) Water Quality Assessment Based on WQI and CWQI Indexes in Balikhlou River, Iran
+ (2013) Water Quality Assessment Based on WQI and CWQI Indexes in Balikhlou River, Iran
 
 (2017) Water quality assessment based on CWQI and NDWI indices in Mariout Lake, Egypt
 
- 
+ (2020) The Analysis of Water Quality Using Canadian Water Quality Index: Green Belt Project/Kerbala-Iraq
 
-(2020) The Analysis of Water Quality Using Canadian Water Quality Index: Green Belt Project/Kerbala-Iraq
-
- 
-
+ PORTO. Mônica. Enquadramento de Corpos Hídricos. Um Novo Desafio! Vamos enfrentá-lo? s/d. Disponível em: http://www.sigrh.sp.gov.br/public/uploads/documents/7498/apresentacao-monica-porto-sma-coordrh_mai08.pdf. Acesso em agosto/2017.
