See https://github.com/open-geodata/sp_cetesb_infoaguas/commit/a5984ced9a40ff1e77f6e81fe2a0b4f65ab2d9b4 from refs/heads/main

--- a/_posts/sp_cetesb_infoaguas/2020-01-01-ice.md
+++ b/_posts/sp_cetesb_infoaguas/2020-01-01-ice.md
@@ -49,7 +49,7 @@ O ínidice é composto por três componentes:
 
 - Fator 1 **Abrangência/Espaço**: representa a abrangência das desconformidades, isto é, o número de variáveis que violaram os limites desejáveis pelo menos uma vez no período de observação
 - Fator 2 **Frequência**: representa a porcentagem de vezes que a variável esteve em desconformidade em relação ao número de observações
-- Fator 3 **Amplitude**: representa a quantidade pela qual o valor testado falhou, isto é, a diferença entre o valor observado e o valor desejado de acordo com o objetivo de qualidade da água.
+- Fator 3 **Amplitude**: representa a quantidade pela qual o valor testado falhou, isto é, a diferença entre o valor observado e o valor desejado de acordo com o objetivo de qualidade da água.<br>
 
 
 $$
@@ -60,7 +60,7 @@ $$
 
 <br>
 
-Para o cálculo do Fator 1 é necessário calcular a proporção do número de variáveis (ou parâmetros) que obtiveram desconformidade em um dado período de tempo. No presente estudo, estou utilizando o intervalo de um ano.
+Para o cálculo do Fator 1 é necessário calcular a proporção do número de variáveis (ou parâmetros) que obtiveram desconformidade em um dado período de tempo. No presente estudo, estou utilizando o intervalo de um ano.<br>
 $$
 \begin{align}
 F_1 = \frac{Nº\;de\;Variáveis\;que\;Falharam} {Nº\;Total\;de\;Variáveis}
@@ -68,7 +68,7 @@ F_1 = \frac{Nº\;de\;Variáveis\;que\;Falharam} {Nº\;Total\;de\;Variáveis}
 $$
 <br>
 
-Para o cálculo de F2 é necessário calcular a proporção do número de amostras deconformes (de todas os parâmetros empregados na análise) em um dado período de tempo.
+Para o cálculo de F2 é necessário calcular a proporção do número de amostras deconformes (de todas os parâmetros empregados na análise) em um dado período de tempo.<br>
 $$
 \begin{align}
 F_2 = \frac{Nº\;de\;Testes\;que\;Falharam} {Nº\;Total\;de\;Testes}
@@ -76,7 +76,7 @@ F_2 = \frac{Nº\;de\;Testes\;que\;Falharam} {Nº\;Total\;de\;Testes}
 $$
 <br>
 
-Para o cálculo de F3, faz-se necessário calcular a *soma normalizada das variações* (*snv*), que representa a distância do **valor máximo permitido** (VMP) estabelecido em alguma normativa (por exemplo, Decreto Estadual 8.468/76, Resolução CONAMA 357/05, Decisão de Diretoria CETESB 363/11 etc). Inicialmente é necessário calcular, para cada amostra desconforme, quantas vezes ela se afastou do desejado (VMP), conforme fórmula abaixo.
+Para o cálculo de F3, faz-se necessário calcular a *soma normalizada das variações* (*snv*), que representa a distância do **valor máximo permitido** (VMP) estabelecido em alguma normativa (por exemplo, Decreto Estadual 8.468/76, Resolução CONAMA 357/05, Decisão de Diretoria CETESB 363/11 etc). Inicialmente é necessário calcular, para cada amostra desconforme, quantas vezes ela se afastou do desejado (VMP), conforme fórmula abaixo.<br>
 $$
 \begin{align}
 Variação = \left(\frac{Valor\;testado\;que\;falhou} {Objetivo_i}\right)-1
@@ -84,7 +84,7 @@ Variação = \left(\frac{Valor\;testado\;que\;falhou} {Objetivo_i}\right)-1
 $$
 <br>
 
-Há parâmetros que a meta é que a amostra não ultrapasse um dado valor, seria algo como um **valor mínimo permitido**. Como exemplo temos o Oxigênio Dissolvido (OD) que quanto maior, mehor! De acordo com as normas, para rios de classe 2, o mínimo de OD deve ser de 5 mg/L. Para esse tipo de parâmetro, dever ser feita uma pequena modificação para definição da variação, conforme abaixo.
+Há parâmetros que a meta é que a amostra não ultrapasse um dado valor, seria algo como um **valor mínimo permitido**. Como exemplo temos o Oxigênio Dissolvido (OD) que quanto maior, mehor! De acordo com as normas, para rios de classe 2, o mínimo de OD deve ser de 5 mg/L. Para esse tipo de parâmetro, dever ser feita uma pequena modificação para definição da variação, conforme abaixo.<br>
 $$
 \begin{align}
 Variação = \left(\frac{Objetivo_i}{Valor\;testado\;que\;falhou}\right)-1
@@ -92,7 +92,7 @@ Variação = \left(\frac{Objetivo_i}{Valor\;testado\;que\;falhou}\right)-1
 $$
 <br>
 
-A *soma normalizada das variações* (*snv*) busca encontrar uma média da distância ao VMP por amostra, conforme abaixo:
+A *soma normalizada das variações* (*snv*) busca encontrar uma média da distância ao VMP por amostra, conforme abaixo:<br>
 $$
 \begin{align}
 snv = \frac{ \sum_{i=1}^{n}  Variações_i }{Nº\;Total\;de\;Testes}
@@ -100,7 +100,7 @@ snv = \frac{ \sum_{i=1}^{n}  Variações_i }{Nº\;Total\;de\;Testes}
 $$
 <br>
 
-Um pequeno ajuste é feito para não haver erros nos calculos, acrescentando um número insignificante no denominador do parâmetro F3.
+Um pequeno ajuste é feito para não haver erros nos calculos, acrescentando um número insignificante no denominador do parâmetro F3.<br>
 $$
 \begin{align}
 F_3 = \frac{snv} {snv+0,0000001}
