See https://github.com/open-geodata/sp_cetesb_infoaguas/commit/5b4164df1d883dfa5f3f3bc4e5b6cc5b0be2bb3d from refs/heads/main

--- a/_posts/sp_cetesb_infoaguas/2020-01-01-ice.md
+++ b/_posts/sp_cetesb_infoaguas/2020-01-01-ice.md
@@ -45,11 +45,15 @@ A definição do *CCME Water Quality Index* é expressa, em geral, pela fómula 
 
 O índice foi calculado usando o *python*, porém há um vídeo no [YouTube: CCME Water Quality Index Calculation using MS-Excel](https://www.youtube.com/watch?v=0zENI39T2HQ) que auxiliou na checagem de todos os cálculos, sendo o Excel uma ferramenta mais "visual".
 
-O ínidice é composto por três componentes:
+O índice é composto por três componentes:
 
 - Fator 1 **Abrangência/Espaço**: representa a abrangência das desconformidades, isto é, o número de variáveis que violaram os limites desejáveis pelo menos uma vez no período de observação
+
 - Fator 2 **Frequência**: representa a porcentagem de vezes que a variável esteve em desconformidade em relação ao número de observações
-- Fator 3 **Amplitude**: representa a quantidade pela qual o valor testado falhou, isto é, a diferença entre o valor observado e o valor desejado de acordo com o objetivo de qualidade da água.<br>
+
+- Fator 3 **Amplitude**: representa a quantidade pela qual o valor testado falhou, isto é, a diferença entre o valor observado e o valor desejado de acordo com o objetivo de qualidade da água.
+
+  <br>
 
 
 $$
@@ -60,7 +64,9 @@ $$
 
 <br>
 
-Para o cálculo do Fator 1 é necessário calcular a proporção do número de variáveis (ou parâmetros) que obtiveram desconformidade em um dado período de tempo. No presente estudo, estou utilizando o intervalo de um ano.<br>
+Para o cálculo do Fator 1 é necessário calcular a proporção do número de variáveis (ou parâmetros) que obtiveram desconformidade em um dado período de tempo. No presente estudo, estou utilizando o intervalo de um ano.
+
+<br>
 $$
 \begin{align}
 F_1 = \frac{Nº\;de\;Variáveis\;que\;Falharam} {Nº\;Total\;de\;Variáveis}
