See https://github.com/open-geodata/sp_cetesb_infoaguas/commit/41d93d0567d0efb99240a3fe98e85642f80b36ac from refs/heads/main

--- a/_posts/sp_cetesb_infoaguas/2020-01-01-ice.md
+++ b/_posts/sp_cetesb_infoaguas/2020-01-01-ice.md
@@ -53,13 +53,28 @@ O índice é composto por três componentes:
 
 - Fator 3 **Amplitude**: representa a quantidade pela qual o valor testado falhou, isto é, a diferença entre o valor observado e o valor desejado de acordo com o objetivo de qualidade da água.
 
-  <br>
+<br>
 
+Testes
 
 $$
 \begin{align}
 CCME\;Water\;Quality\;Index = 1 - \left(\frac{\sqrt{F_1^2 + F_2^2 + F_3^2}}{\sqrt{3}}\right)
 \end{align}
+$$
+
+Teste
+
+$$
+\begin{equation}
+CCME\;Water\;Quality\;Index = 1 - \left(\frac{\sqrt{F_1^2 + F_2^2 + F_3^2}}{\sqrt{3}}\right)
+\end{equation}
+$$
+
+Teste
+
+$$
+CCME\;Water\;Quality\;Index = 1 - \left(\frac{\sqrt{F_1^2 + F_2^2 + F_3^2}}{\sqrt{3}}\right)
 $$
 
 <br>
