--- a/_posts/sp_cetesb_infoaguas/2020-01-01-ice.md
+++ b/_posts/sp_cetesb_infoaguas/2020-01-01-ice.md
@@ -55,26 +55,10 @@ O índice é composto por três componentes:
 
 <br>
 
-Testes
-
 $$
 \begin{align}
 CCME\;Water\;Quality\;Index = 1 - \left(\frac{\sqrt{F_1^2 + F_2^2 + F_3^2}}{\sqrt{3}}\right)
 \end{align}
-$$
-
-Teste
-
-$$
-\begin{equation}
-CCME\;Water\;Quality\;Index = 1 - \left(\frac{\sqrt{F_1^2 + F_2^2 + F_3^2}}{\sqrt{3}}\right)
-\end{equation}
-$$
-
-Teste
-
-$$
-CCME\;Water\;Quality\;Index = 1 - \left(\frac{\sqrt{F_1^2 + F_2^2 + F_3^2}}{\sqrt{3}}\right)
 $$
 
 <br>
@@ -82,52 +66,60 @@ $$
 Para o cálculo do Fator 1 é necessário calcular a proporção do número de variáveis (ou parâmetros) que obtiveram desconformidade em um dado período de tempo. No presente estudo, estou utilizando o intervalo de um ano.
 
 <br>
+
 $$
-\begin{align}
 F_1 = \frac{Nº\;de\;Variáveis\;que\;Falharam} {Nº\;Total\;de\;Variáveis}
-\end{align}
 $$
+
 <br>
 
 Para o cálculo de F2 é necessário calcular a proporção do número de amostras deconformes (de todas os parâmetros empregados na análise) em um dado período de tempo.<br>
+
+<br>
+
 $$
-\begin{align}
 F_2 = \frac{Nº\;de\;Testes\;que\;Falharam} {Nº\;Total\;de\;Testes}
-\end{align}
 $$
+
 <br>
 
-Para o cálculo de F3, faz-se necessário calcular a *soma normalizada das variações* (*snv*), que representa a distância do **valor máximo permitido** (VMP) estabelecido em alguma normativa (por exemplo, Decreto Estadual 8.468/76, Resolução CONAMA 357/05, Decisão de Diretoria CETESB 363/11 etc). Inicialmente é necessário calcular, para cada amostra desconforme, quantas vezes ela se afastou do desejado (VMP), conforme fórmula abaixo.<br>
+Para o cálculo de F3, faz-se necessário calcular a *soma normalizada das variações* (*snv*), que representa a distância do **valor máximo permitido** (VMP) estabelecido em alguma normativa (por exemplo, Decreto Estadual 8.468/76, Resolução CONAMA 357/05, Decisão de Diretoria CETESB 363/11 etc). Inicialmente é necessário calcular, para cada amostra desconforme, quantas vezes ela se afastou do desejado (VMP), conforme fórmula abaixo.
+
+<br>
+
 $$
-\begin{align}
 Variação = \left(\frac{Valor\;testado\;que\;falhou} {Objetivo_i}\right)-1
-\end{align}
 $$
+
 <br>
 
-Há parâmetros que a meta é que a amostra não ultrapasse um dado valor, seria algo como um **valor mínimo permitido**. Como exemplo temos o Oxigênio Dissolvido (OD) que quanto maior, mehor! De acordo com as normas, para rios de classe 2, o mínimo de OD deve ser de 5 mg/L. Para esse tipo de parâmetro, dever ser feita uma pequena modificação para definição da variação, conforme abaixo.<br>
-$$
-\begin{align}
-Variação = \left(\frac{Objetivo_i}{Valor\;testado\;que\;falhou}\right)-1
-\end{align}
-$$
+Há parâmetros que a meta é que a amostra não ultrapasse um dado valor, seria algo como um **valor mínimo permitido**. Como exemplo temos o Oxigênio Dissolvido (OD) que quanto maior, mehor! De acordo com as normas, para rios de classe 2, o mínimo de OD deve ser de 5 mg/L. Para esse tipo de parâmetro, dever ser feita uma pequena modificação para definição da variação, conforme abaixo.
+
 <br>
 
-A *soma normalizada das variações* (*snv*) busca encontrar uma média da distância ao VMP por amostra, conforme abaixo:<br>
 $$
-\begin{align}
+\[Variação = \left(\frac{Objetivo_i}{Valor\;testado\;que\;falhou}\right)-1\]
+$$
+
+<br>
+
+A *soma normalizada das variações* (*snv*) busca encontrar uma média da distância ao VMP por amostra, conforme abaixo:
+
+<br>
+
+$$
 snv = \frac{ \sum_{i=1}^{n}  Variações_i }{Nº\;Total\;de\;Testes}
-\end{align}
 $$
+
 <br>
 
-Um pequeno ajuste é feito para não haver erros nos calculos, acrescentando um número insignificante no denominador do parâmetro F3.<br>
-$$
-\begin{align}
-F_3 = \frac{snv} {snv+0,0000001}
-\end{align}
-$$
+Um pequeno ajuste é feito para não haver erros nos calculos, acrescentando um número insignificante no denominador do parâmetro F3.
 
+<br>
+
+$$
+F_3 = \frac{snv} {snv+0,0000001}
+$$
 
 
 ## Resultados
