See https://github.com/open-geodata/sp_cetesb_infoaguas/commit/390b1aebdafc56486c0c38494cc9551a6de6a145 from refs/heads/main

--- a/_posts/sp_cetesb_infoaguas/2020-01-01-ice.md
+++ b/_posts/sp_cetesb_infoaguas/2020-01-01-ice.md
@@ -56,9 +56,7 @@ O índice é composto por três componentes:
 <br>
 
 $$
-\begin{align}
 CCME\;Water\;Quality\;Index = 1 - \left(\frac{\sqrt{F_1^2 + F_2^2 + F_3^2}}{\sqrt{3}}\right)
-\end{align}
 $$
 
 <br>
@@ -98,7 +96,7 @@ Há parâmetros que a meta é que a amostra não ultrapasse um dado valor, seria
 <br>
 
 $$
-\[Variação = \left(\frac{Objetivo_i}{Valor\;testado\;que\;falhou}\right)-1\]
+Variação = \left(\frac{Objetivo_i}{Valor\;testado\;que\;falhou}\right)-1
 $$
 
 <br>
