See https://github.com/open-geodata/sp_cetesb_infoaguas/commit/a7552ee75003a6fadd1a361a052f96e0f148fd71 from refs/heads/main

--- a/_posts/sp_cetesb_infoaguas/2020-01-01-ice.md
+++ b/_posts/sp_cetesb_infoaguas/2020-01-01-ice.md
@@ -27,9 +27,17 @@ header:
       url: "https://sistemainfoaguas.cetesb.sp.gov.br"
 ---
 
-O Índice de Conformidade ao Enquadramento (ICE) busca indicar uma aderência das amostras realizadas em um período de tempo ao enquadramento definido para um corpo d'água, por meio de um conjunto de parâmetros. O índice foi desenvolvido no Canadá, pelo órgão ambiental que lá atua, e é utilizado até os dias de hoje em algumas províncias canadenses. O índice é conhecido também por *CCME Water Quality Index* (a sigla CCME vem do [Canadian Council of Ministers of the Environment](https://www.ccme.ca/)).
+Surgiu uma questão: *o rio Piracicaba está atendendo ao enquadramento!?* De maneira bastante simplificada, o enquadramento é como se fosse *"o rio que queremos"*, ou seja, a definição de quais rios protegeremos e quais estamos dispostos a poluir (*"em nome do progresso"*). No Estado de São Paulo o enquadramento foi estabelecido em 1977, por meio do [Decreto Estadual 10.755](https://www.al.sp.gov.br/norma/153028). Os rios são enquadrados em quadro classes, sendo a "Classe 1" para os rios mais limpos e a "Classe 4" com maior permissividade ao lançamento de efluentes/poluentes.
 
-Existem diversos trabalhos acadêmicos mostrando a aplicação desse índice no Canadá, Egito, Turquia. No Brasil o índice foi, inicialmente, adotado em pesquisa realizada pelo Laboratório de Suporte a Tomada de Decisão (LabSid), vinculado ao Departamento de Hidráulica da Poli-USP, sendo discutida a *Proposta de um Índice para Avaliação de Conformidade da Qualidade dos Corpos Hídricos ao Enquadramento*, por Cristiane Araújo Amaro, em 2009 em [sua dissertação de mestrado](https://teses.usp.br/teses/disponiveis/3/3147/tde-11082009-121147/pt-br.php). Pinto e colaboradores (2016) fizeram a análise do enquadramento do rio São Francisco por meio desse índice.
+Além do Decreto Estadual, há a [Resolução CONAMA 357/05](http://www.siam.mg.gov.br/sla/download.pdf?idNorma=2747), que indica o que pode ter na água (quais os parâmetros, poluentes, elementos químicos etc) e em quais quantidades! São tantos parâmetros e tantas amostras realizadas, que é natural um parâmetro ou outro apresentar desconformidade (ou seja, valores medidos acima dos valores máximos permitidos) em alguma amostra, realizada em algum momento pontual, sendo difícil mensurar o quanto um rio está desenquadrado em um panorama geral, de longo prazo. Nesse cenário que se aplica o ICE.
+
+<br>
+
+## Resumindo com um índice
+
+O Índice de Conformidade ao Enquadramento (ICE) busca indicar uma aderência das amostras realizadas em um período de tempo ao enquadramento definido para um corpo d'água, por meio de um conjunto de parâmetros. O índice foi desenvolvido no Canadá, pelo órgão ambiental que lá atua, e é utilizado até os dias de hoje em algumas províncias canadenses. Internacionalmente é conhecido por *CCME Water Quality Index* (a sigla CCME vem do [Canadian Council of Ministers of the Environment](https://www.ccme.ca/)).
+
+Existem diversos trabalhos acadêmicos mostrando a aplicação desse índice no Canadá, Egito, Turquia. No Brasil o índice foi adotado em pesquisa realizada pelo Laboratório de Suporte a Tomada de Decisão (LabSid), vinculado ao Departamento de Hidráulica da Poli-USP, sendo discutida a *Proposta de um Índice para Avaliação de Conformidade da Qualidade dos Corpos Hídricos ao Enquadramento*, por Cristiane Araújo Amaro, em 2009 em [sua dissertação de mestrado](https://teses.usp.br/teses/disponiveis/3/3147/tde-11082009-121147/pt-br.php). Pinto e colaboradores (2016) fizeram a análise do enquadramento do rio São Francisco por meio desse índice.
 
 Nas bacias hidrográficas dos rios Piracicaba, Capivari e Jundiaí o ICE foi aplicado quando da elaboração do [*Plano de Bacias*](https://plano.agencia.baciaspcj.org.br/o-plano/documentos), adotando cinco parâmetros sendo eles: fósforo, nitrogênio, coliformes fecais, oxigênio dissolvido (OD), demanda bioquímica de oxigênio (DBO). O Plano também sintetizou o significado do ICE:
 
@@ -43,15 +51,15 @@ Nas bacias hidrográficas dos rios Piracicaba, Capivari e Jundiaí o ICE foi apl
 
 A definição do *CCME Water Quality Index* é expressa, em geral, pela fómula abaixo. Pequenas modificações foram feitas visando simplificar os cálculos e notações matemáticas, visto que na definição o índice varia entre o número de 0 e 100 e, seguindo as modificações que fiz o índice passou a ser expresso em porcentagem, ou seja, varia entre 0 e 100%.
 
-O índice foi calculado usando o *python*, porém há um vídeo no [YouTube: CCME Water Quality Index Calculation using MS-Excel](https://www.youtube.com/watch?v=0zENI39T2HQ) que auxiliou na checagem de todos os cálculos, sendo o Excel uma ferramenta mais "visual".
+Os dados foram obtidos no Sistema Infoáguas, conforme apresentado [anteriormente](https://open-geodata.github.io/blog/infoaguas/). O índice foi calculado usando o *python*. 
 
 O índice é composto por três componentes:
 
 - Fator 1 **Abrangência/Espaço**: representa a abrangência das desconformidades, isto é, o número de variáveis que violaram os limites desejáveis pelo menos uma vez no período de observação
-
 - Fator 2 **Frequência**: representa a porcentagem de vezes que a variável esteve em desconformidade em relação ao número de observações
-
 - Fator 3 **Amplitude**: representa a quantidade pela qual o valor testado falhou, isto é, a diferença entre o valor observado e o valor desejado de acordo com o objetivo de qualidade da água.
+
+
 
 <br>
 
@@ -122,7 +130,7 @@ $$
 
 ## Resultados
 
-
+O resultado do cálculo do Índice de Conformidade ao Enquadramento (ICE) para o ponto de monitoramento no rio Piracicaba, na captação de água de abastecimento público em Americana PCAB02100, é apresentado abaixo. Conforme pode-se observar, desde o início do monitoramento realizado pela CETESB, a qualidade da água não mudou muito: continuou sempre ruim.
 
 <iframe src="/assets/sp_cetesb_infoaguas/graphs/PCAB02100 - ICE.html" width="100%" height="500"  frameborder="0" allowfullscreen webkitallowfullscreen mozallowfullscreen oallowfullscreen msallowfullscreen></iframe>
 
@@ -130,14 +138,11 @@ $$
 
 ## Referências
 
-Análise dos Valores do Índice de Conformidade ao Enquadramento no Baixo Rio das Velhas, situado na bacia hidrográfica do rio São Francisco
-
-Canadian Water Quality Index
-
- (2013) Water Quality Assessment Based on WQI and CWQI Indexes in Balikhlou River, Iran
-
-(2017) Water quality assessment based on CWQI and NDWI indices in Mariout Lake, Egypt
-
- (2020) The Analysis of Water Quality Using Canadian Water Quality Index: Green Belt Project/Kerbala-Iraq
-
- PORTO. Mônica. Enquadramento de Corpos Hídricos. Um Novo Desafio! Vamos enfrentá-lo? s/d. Disponível em: http://www.sigrh.sp.gov.br/public/uploads/documents/7498/apresentacao-monica-porto-sma-coordrh_mai08.pdf. Acesso em agosto/2017.
+- Amaro, Cristiane Araújo. Proposta de um índice para avaliação de conformidade da qualidade dos corpos hídricos ao enquadramento. [Dissertação de Mestrado](https://teses.usp.br/teses/disponiveis/3/3147/tde-11082009-121147/pt-br.php). 2009.
+- Pinto, C. C.; Soares, A. L. C.; Melo, L. D. V; Oliveira, S. M. A. C. Análise dos Valores do Índice de Conformidade ao Enquadramento no Baixo Rio das Velhas, situado na bacia hidrográfica do rio São Francisco. I Simpósio da Bacia Hidrográfica do Rio São Francisco - 5 a 9 de junho de 2016.
+- Al-Mohammed, F.M., Al-Saadi, R.J.M., Al-Fawzy, A.M., Mohammed-Ali, S.H., Mutasher, A.A., Hommadi, A.H. (2021). The analysis of water quality using Canadian water quality index: Green belt Project/Kerbala-Iraq. International Journal of Design & Nature and Ecodynamics, Vol. 16, No. 1, pp. 91-98. https://doi.org/10.18280/ijdne.160112
+- Fataei, E., Seyyedsharifi , A., Seiiedsafaviyan, T. & Nasrollahzadeh, S. (2013). Water quality assessment based on WQI and CWQI Indexes in Balikhlou River, Iran, Journal of Basic Applied Sciences Research, 3(3), pp. 263–269.
+- Kafrawy, S. B.; Donia, N. S.; Mohamed, A. M. Water quality assessment based on CWQI and NDWI indices in Mariout Lake, Egypt. MOJ Ecology & Environmental Science. 2(5):224‒232, 2017
+- Porto. Mônica. Enquadramento de Corpos Hídricos. Um Novo Desafio! Vamos enfrentá-lo? s/d. Disponível em: http://www.sigrh.sp.gov.br/public/uploads/documents/7498/apresentacao-monica-porto-sma-coordrh_mai08.pdf. Acesso em março/2022.
+- [Government of Newfoundland and Labrador - Canadian Water Quality Index](https://www.gov.nl.ca/ecc/waterres/quality/background/cwqi/)
+- [YouTube: CCME Water Quality Index Calculation using MS-Excel](https://www.youtube.com/watch?v=0zENI39T2HQ), auxiliou na checagem de todos os cálculos, sendo o Excel uma ferramenta mais "visual".
