See https://github.com/open-geodata/sp_cetesb_infoaguas/commit/a863e3fe2e20457e1be7af5de20c873ab1ecc805 from refs/heads/main

--- a/_posts/sp_cetesb_infoaguas/2020-01-01-ice.md
+++ b/_posts/sp_cetesb_infoaguas/2020-01-01-ice.md
@@ -94,7 +94,7 @@ Para o cálculo de F3, faz-se necessário calcular a *soma normalizada das varia
 <br>
 
 $$
-Variaç\tilde{a}o = \left(\frac{Valor\;testado\;que\;falhou} {Objetivo_i}\right)-1
+Varia\textit{\c{c}}\tilde{a}o = \left(\frac{Valor\;testado\;que\;falhou} {Objetivo_i}\right)-1
 $$
 
 <br>
@@ -104,7 +104,7 @@ Há parâmetros que a meta é que a amostra não ultrapasse um dado valor, seria
 <br>
 
 $$
-Varia\c{c}\tilde{a}o = \left(\frac{Objetivo_i}{Valor\;testado\;que\;falhou}\right)-1
+Varia\textit{\c{c}}\tilde{a}o = \left(\frac{Objetivo_i}{Valor\;testado\;que\;falhou}\right)-1
 $$
 
 <br>
