See https://github.com/open-geodata/sp_cetesb_infoaguas/commit/dd6a3f287deced8b28604cee014f1bdd66125bd6 from refs/heads/main

--- a/_posts/sp_cetesb_infoaguas/2020-01-01-ice.md
+++ b/_posts/sp_cetesb_infoaguas/2020-01-01-ice.md
@@ -94,9 +94,7 @@ Para o cálculo de F3, faz-se necessário calcular a *soma normalizada das varia
 <br>
 
 $$
-Varia\textit{\c{c}}\tilde{a}o = \left(\frac{Valor\;testado\;que\;falhou} {Objetivo_i}\right)-1
-
-&#199
+Varia{\c{c}\tilde{a}o = \left(\frac{Valor\;testado\;que\;falhou} {Objetivo_i}\right)-1
 $$
 
 <br>
