See https://github.com/open-geodata/sp_cetesb_infoaguas/commit/02aeebcae1c4deabd13e10026344e195fbad383b from refs/heads/main

--- a/_posts/sp_cetesb_infoaguas/2020-01-01-ice.md
+++ b/_posts/sp_cetesb_infoaguas/2020-01-01-ice.md
@@ -104,7 +104,7 @@ Há parâmetros que a meta é que a amostra não ultrapasse um dado valor, seria
 <br>
 
 $$
-Varia\textit{\c{c}}\tilde{a}o = \left(\frac{Objetivo_i}{Valor\;testado\;que\;falhou}\right)-1
+Varia\unicode{xE7}\tilde{a}o = \left(\frac{Objetivo_i}{Valor\;testado\;que\;falhou}\right)-1
 $$
 
 <br>
